; ModuleID = '/home/carl/AnghaBench/linux/drivers/mux/extr_core.c_of_find_mux_chip_by_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mux/extr_core.c_of_find_mux_chip_by_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mux_chip = type { i32 }
%struct.device_node = type { i32 }
%struct.device = type { i32 }

@mux_class = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mux_chip* (%struct.device_node*)* @of_find_mux_chip_by_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mux_chip* @of_find_mux_chip_by_node(%struct.device_node* %0) #0 {
  %2 = alloca %struct.device_node*, align 8
  %3 = alloca %struct.device*, align 8
  store %struct.device_node* %0, %struct.device_node** %2, align 8
  %4 = load %struct.device_node*, %struct.device_node** %2, align 8
  %5 = call %struct.device* @class_find_device_by_of_node(i32* @mux_class, %struct.device_node* %4)
  store %struct.device* %5, %struct.device** %3, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = icmp ne %struct.device* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.device*, %struct.device** %3, align 8
  %10 = call %struct.mux_chip* @to_mux_chip(%struct.device* %9)
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %8
  %13 = phi %struct.mux_chip* [ %10, %8 ], [ null, %11 ]
  ret %struct.mux_chip* %13
}

declare dso_local %struct.device* @class_find_device_by_of_node(i32*, %struct.device_node*) #1

declare dso_local %struct.mux_chip* @to_mux_chip(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
